[tool.poetry]
name = "train-ezpy"
version = "0.1.0"
description = ""
authors = ["aoroudjev <a.oroudjev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
tensorflow-io-gcs-filesystem = "0.31"
tensorflow = "^2.14.0"
keras-cv = "^0.6.4"
tensorflow-datasets="4.9.2"
opencv-python = "^4.8.1.78"
matplotlib = "3.7.1"
array-record = "0.4.1"
pycocotools = "^2.0.7"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
